Take the horrible URL class out of the normal code path, and make it clear why it is used at all.